Minor changes in makefile, weather broker config, client.go, server config, message handler, server main.go and server.go

--- a/TP1/Makefile
+++ b/TP1/Makefile
@@ -6,7 +6,7 @@ build-images:
 	docker build -f ./client/Dockerfile -t "client:latest" .
 .PHONY: build-images
 
-mandale-mecha: build-images
+mandale-mecha:
 	docker-compose -f docker-compose.yaml up -d --build
 .PHONY: mandale-mecha
 
