--- a/TP1/Makefile
+++ b/TP1/Makefile
@@ -4,7 +4,7 @@ PWD := $(shell pwd)
 build-images:
 	docker build -f ./server/Dockerfile -t "server:latest" .
 	docker build -f ./client/Dockerfile -t "client:latest" .
-	docker build -f ./brokers/Dockerfile -t "brokers:latest" .
+	docker build -f ./workers/Dockerfile -t "workers:latest" .
 .PHONY: build-images
 
 mandale-mecha:
