--- a/TP1/docker-compose.yaml
+++ b/TP1/docker-compose.yaml
@@ -24,31 +24,14 @@ services:
     depends_on:
       - server
 
-  worker1:
-    container_name: worker1
+  worker:
+    container_name: worker
     image: workers:latest
     entrypoint: ./main
     environment:
       - WORKER_ID=1
       - CITY=montreal
       - WORKER_TYPE=weather-worker
-      - FINISH_PROCESSING_MESSAGE=weather-PONG
-      - LOG_LEVEL=DEBUG
-    networks:
-      - bikers
-    depends_on:
-      - rabbit
-      - server
-
-  worker2:
-    container_name: worker2
-    image: workers:latest
-    entrypoint: ./main
-    environment:
-      - WORKER_ID=1
-      - CITY=montreal
-      - WORKER_TYPE=trips-worker
-      - FINISH_PROCESSING_MESSAGE=trips-PONG
       - LOG_LEVEL=DEBUG
     networks:
       - bikers
