refactor trip worker (config also)

--- a/TP1/workers/factory/worker_type/trip/config/config.yaml
+++ b/TP1/workers/factory/worker_type/trip/config/config.yaml
@@ -4,73 +4,43 @@ valid_columns:
   end_date: 4
   end_station_code: 5
   duration: 6
-  year_id: 7
+  year_id: 8
 
 rabbit_mq:
   trips:
     exchange_input_trips: # messages from server to trip-worker
       exchange_declaration_config:
-        name: "trips_topic"
+        name: "trips-topic"
         type: "topic"
         durable: true
         auto_deleted: false
         internal: false
         no_wait: false
 
-      consumption_config:
-        exchange: "trips_topic"
-        mandatory: false
-        immediate: false
-        content_type: "text/plain"
-
-      queue_declaration_config: # Anonymous queue for consuming messages
-        durable: true
-        delete_when_unused: false
-        exclusive: true
-        no_wait: false
-
-    exchange_output_trips_rain: # messages from trip-worker to rain accumulator
+    exchange_output_trips_rain: # messages from trip-worker to rain joiner
       exchange_declaration_config:
-        name: "rain_accumulator_topic"
+        name: "trips-rain-joiner-topic"
         type: "topic"
         durable: true
         auto_deleted: false
         internal: false
         no_wait: false
 
-      publishing_config:
-        exchange: "rain_accumulator_topic"
-        mandatory: false
-        immediate: false
-        content_type: "application/json"
 
-    exchange_output_trips_year_filter: # messages from trip-worker to year filter
+    exchange_output_trips_year_filter: # messages from trip-worker to duplicate joiner
       exchange_declaration_config:
-        name: "year_filter_topic"
+        name: "trips-duplicate-joiner-topic"
         type: "topic"
         durable: true
         auto_deleted: false
         internal: false
         no_wait: false
 
-      publishing_config:
-        exchange: "year_filter_topic"
-        mandatory: false
-        immediate: false
-        content_type: "application/json"
-
-    exchange_output_trips_montreal_filter: # messages from trip-worker to montreal filter
+    exchange_output_trips_montreal_filter: # messages from trip-worker to montreal joiner
       exchange_declaration_config:
-        name: "montreal_filter_topic"
+        name: "trips-montreal-joiner-topic"
         type: "topic"
         durable: true
         auto_deleted: false
         internal: false
         no_wait: false
-
-      publishing_config:
-        exchange: "montreal_filter_topic"
-        mandatory: false
-        immediate: false
-        content_type: "application/json"
-
