--- a/TP1/workers/factory/worker_type/weather/config/config.yaml
+++ b/TP1/workers/factory/worker_type/weather/config/config.yaml
@@ -4,6 +4,10 @@ valid_columns:
   date: 2
   rainfall: 3
 
+data_delimiter: '|'
+data_field_delimiter: ','
+end_batch_marker: 'PING'
+
 exchanges:
   exchange_input_weather: # messages from server to weather-worker
       name: "weather-topic"
