+ Add more workers in docker compose
+ Change dependencies in server (it has to wait for all the other dependencies except client obviously)

+ Add some logs for debugging

+ Fix bug in publishData of WeatherWorker, an invalid key was used as the exchange name

--- a/TP1/Makefile
+++ b/TP1/Makefile
@@ -17,10 +17,9 @@ stop-app:
 .PHONY: stop-app
 
 delete-app: stop-app
-	echo "te estas portando mal seras castigado"
 	docker-compose -f docker-compose.yaml down
+	echo "TE ESTAS PORTANDO MAL SERAS CASTIGADO"
 .PHONY: delete-app
-
 
 logs:
 	docker-compose -f docker-compose.yaml logs -f
