--- a/TP1/joiners/factory/joiner_type/rainjoiner/config/config.yaml
+++ b/TP1/joiners/factory/joiner_type/rainjoiner/config/config.yaml
@@ -1,3 +1,5 @@
+eof_type: "EOF"
+
 exchanges:
   exchange_input_weather_rain_joiner: # messages from Weather Worker to Rain Joiner
     name: "weather-rainjoiner-topic"
