Fix race condition problem in workers: WHEN WE HAVE INPUT EXCHANGES WE HAVE TO DO THE BINDING AFTER THE DECLARATION, OTHERWISE WE ARE GONNA HAVE PROBLEMS.

--- a/TP1/workers/factory/worker_type/station/config/config.yaml
+++ b/TP1/workers/factory/worker_type/station/config/config.yaml
@@ -11,6 +11,7 @@ end_batch_marker: 'PING'
 
 include_years: [2016, 2017]
 include_cities: ["montreal"]
+input_exchange: "stations-topic"
 
 exchanges:
   exchange_input_stations: # messages from server to station-worker
