--- a/TP1/workers/factory/worker_type/weather/config/config.yaml
+++ b/TP1/workers/factory/worker_type/weather/config/config.yaml
@@ -8,6 +8,8 @@ data_delimiter: '|'
 data_field_delimiter: ','
 end_batch_marker: 'PING'
 
+input_exchange: "weather-topic"
+
 exchanges:
   exchange_input_weather: # messages from server to weather-worker
       name: "weather-topic"
