Changes in names in different parts of the EOF manager. Add some comments to avoid getting lost when a bug occurs

--- a/TP1/eofmanager/Dockerfile
+++ b/TP1/eofmanager/Dockerfile
@@ -6,6 +6,7 @@ COPY ../go.sum .
 COPY ../eofmanager/*.go .
 COPY ../utils/ ./utils/
 COPY ../eofmanager/config/ ./config/
+COPY ../domain/entities/ ./domain/entities/
 COPY ../communication/ ./communication/
 
 RUN go mod download
