--- a/TP1/docker-compose.yaml
+++ b/TP1/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
         condition: service_started
       ww_montreal_1:
         condition: service_started
-      rain_joiner_montreal_1:
+      city_joiner_montreal_1:
         condition: service_started
 
   client:
@@ -64,7 +64,7 @@ services:
     depends_on:
       - eof_manager
       - rabbit
-      - rain_joiner_montreal_1
+      - city_joiner_montreal_1
 
   tw_montreal_1:
     container_name: tw_montreal_1
@@ -81,16 +81,33 @@ services:
     depends_on:
       - eof_manager
       - rabbit
-      - rain_joiner_montreal_1
+      - city_joiner_montreal_1
 
-  rain_joiner_montreal_1:
-    container_name: rain_joiner_montreal_1
+  sw_montreal_1:
+    container_name: sw_montreal_1
+    image: workers:latest
+    entrypoint: ./main
+    environment:
+      - WORKER_ID=1
+      - CITY=montreal
+      - WORKER_TYPE=stations-worker
+      - LOG_LEVEL=DEBUG
+      - RABBIT_URL=amqp://guest:guest@rabbit:5672/
+    networks:
+      - bikers
+    depends_on:
+      - eof_manager
+      - rabbit
+      - city_joiner_montreal_1
+
+  city_joiner_montreal_1:
+    container_name: city_joiner_montreal_1
     image: joiners:latest
     entrypoint: ./main
     environment:
       - JOINER_ID=Q1
       - CITY=montreal
-      - JOINER_TYPE=rain-joiner
+      - JOINER_TYPE=city-joiner
       - LOG_LEVEL=DEBUG
       - RABBIT_URL=amqp://guest:guest@rabbit:5672/
     networks:
