--- a/TP1/joiners/factory/joiner_type/cityjoiner/config/config.yaml
+++ b/TP1/joiners/factory/joiner_type/cityjoiner/config/config.yaml
@@ -1,5 +1,8 @@
 eof_type: "EOF"
 
+valid_cities:
+  - montreal
+
 exchanges:
   exchange_input_stations_city_joiner: # messages from Station Worker to City Joiner
     name: "stations-cityjoiner-topic"
@@ -29,7 +32,7 @@ eof_queue_config: # queue of the eof manager
   no_wait: false
 
 output_city_handler_queue: # messages from City Joiner to City Handler
-  name: "cityjoiner-rainhandler-queue"
+  name: "cityjoiner-cityhandler-queue"
   durable: true
   delete_when_unused: false
   exclusive: true
